; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/platforms/cell/extr_spu_base.c_mm_needs_global_tlbie.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/platforms/cell/extr_spu_base.c_mm_needs_global_tlbie.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mm_struct = type { i32 }

@NR_CPUS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mm_struct*)* @mm_needs_global_tlbie to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mm_needs_global_tlbie(%struct.mm_struct* %0) #0 {
  %2 = alloca %struct.mm_struct*, align 8
  %3 = alloca i32, align 4
  store %struct.mm_struct* %0, %struct.mm_struct** %2, align 8
  %4 = load i32, i32* @NR_CPUS, align 4
  %5 = icmp sgt i32 %4, 1
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @NR_CPUS, align 4
  br label %11

8:                                                ; preds = %1
  %9 = load i32, i32* @NR_CPUS, align 4
  %10 = add nsw i32 %9, 1
  br label %11

11:                                               ; preds = %8, %6
  %12 = phi i32 [ %7, %6 ], [ %10, %8 ]
  store i32 %12, i32* %3, align 4
  %13 = load %struct.mm_struct*, %struct.mm_struct** %2, align 8
  %14 = call i32 @mm_cpumask(%struct.mm_struct* %13)
  %15 = call i32 @cpumask_bits(i32 %14)
  %16 = load i32, i32* %3, align 4
  %17 = call i32 @bitmap_fill(i32 %15, i32 %16)
  ret void
}

declare dso_local i32 @bitmap_fill(i32, i32) #1

declare dso_local i32 @cpumask_bits(i32) #1

declare dso_local i32 @mm_cpumask(%struct.mm_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
